# candle-gemm-bench

./: .gitmodules  Cargo.toml  README.md  results.txt
benchmark/: Cargo.toml
benchmark/benches/: candle_gemm.rs
cli/: Cargo.toml
cli/src/: main.rs
cudnn-gemm/: Cargo.toml  build.rs
cudnn-gemm/kernels/: bf16_fp8_cudnn.cu
cudnn-gemm/src/: lib.rs
cutlass-gemm/: Cargo.toml  build.rs
cutlass-gemm/kernels/: bf16_fp8_cutlass_sm90.cu  fp8_fp8_cutlass_sm90.cu
cutlass-gemm/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
