[workspace]
resolver = "2"
members = ["benchmark", "cli", "cutlass-gemm", "util"]

[workspace.dependencies]
anyhow = { version = "1.0" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
candle = { package = "candle-core", git = "https://github.com/zackangelo/candle.git", branch = "fix_fp8_deps" }
cudarc = { version = "0.17.2", features = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "f8",
    "cuda-version-from-build-system",
    "dynamic-linking",
], default-features = false }
float8 = "0.3.0"
half = { version = "2.4.1", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
    "serde",
] }
rand = { version = "0.9.0", features = ["std", "std_rng", "thread_rng"] }
rand_distr = { version = "0.5.0" }
